<resources>
    <string name="app_name">One Time Contact</string>
    <string name="title_activity_add_contact">AddContact</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="mob">Mobile Number</string>
    <string name="email">E-mail</string>
    <string name="company">Company</string>
    <string name="jtitle">Job Title</string>
</resources>